--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1,8 +1,8 @@
 _lang_: "日本語"
 
 headlineMisskey: "ノートでつながるネットワーク"
-introMisskey: "ようこそ！Misskeyは、オープンソースの分散型マイクロブログサービスです。\n「ノート」を作成して、いま起こっていることを共有したり、あなたについて皆に発信しよう📡\n「リアクション」機能で、皆のノートに素早く反応を追加することもできます👍\n新しい世界を探検しよう🚀"
-poweredByMisskeyDescription: "{name}は、オープンソースのプラットフォーム<b>Misskey</b>のインスタンスのひとつです。"
+introMisskey: "ようこそ！Re:nekey Liteは、オープンソースの分散型マイクロブログサービスです。\n「ノート」を作成して、いま起こっていることを共有したり、あなたについて皆に発信しよう📡\n「リアクション」機能で、皆のノートに素早く反応を追加することもできます👍\n新しい世界を探検しよう🚀"
+poweredByMisskeyDescription: "{name}は、オープンソースのプラットフォーム<b>Re:nekey Lite</b>のインスタンスのひとつです。"
 monthAndDay: "{month}月 {day}日"
 search: "検索"
 notifications: "通知"
@@ -149,7 +149,7 @@ settingGuide: "おすすめ設定"
 cacheRemoteFiles: "リモートのファイルをキャッシュする"
 cacheRemoteFilesDescription: "この設定を無効にすると、リモートファイルをキャッシュせず直リンクするようになります。サーバーのストレージを節約できますが、サムネイルが生成されないので通信量が増加します。"
 flagAsBot: "Botとして設定"
-flagAsBotDescription: "このアカウントがプログラムによって運用される場合は、このフラグをオンにします。オンにすると、反応の連鎖を防ぐためのフラグとして他の開発者に役立ったり、Misskeyのシステム上での扱いがBotに合ったものになります。"
+flagAsBotDescription: "このアカウントがプログラムによって運用される場合は、このフラグをオンにします。オンにすると、反応の連鎖を防ぐためのフラグとして他の開発者に役立ったり、Re:nekey Liteのシステム上での扱いがBotに合ったものになります。"
 flagAsCat: "Catとして設定"
 flagAsCatDescription: "このアカウントが猫であることを示す場合は、このフラグをオンにします。"
 flagShowTimelineReplies: "タイムラインにノートへの返信を表示する"
@@ -210,7 +210,7 @@ noUsers: "ユーザーはいません"
 editProfile: "プロフィールを編集"
 noteDeleteConfirm: "このノートを削除しますか？"
 pinLimitExceeded: "これ以上ピン留めできません"
-intro: "Misskeyのインストールが完了しました！管理者アカウントを作成しましょう。"
+intro: "Re:nekey Liteのインストールが完了しました！管理者アカウントを作成しましょう。"
 done: "完了"
 processing: "処理中"
 preview: "プレビュー"
@@ -398,7 +398,7 @@ exploreFediverse: "Fediverseを探索"
 popularTags: "人気のタグ"
 userList: "リスト"
 about: "情報"
-aboutMisskey: "Misskeyについて"
+aboutMisskey: "Re:nekey Liteについて"
 administrator: "管理者"
 token: "確認コード"
 2fa: "二要素認証"
@@ -560,7 +560,7 @@ sort: "ソート"
 ascendingOrder: "昇順"
 descendingOrder: "降順"
 scratchpad: "スクラッチパッド"
-scratchpadDescription: "スクラッチパッドは、AiScriptの実験環境を提供します。Misskeyと対話するコードの記述、実行、結果の確認ができます。"
+scratchpadDescription: "スクラッチパッドは、AiScriptの実験環境を提供します。Re:nekey Liteと対話するコードの記述、実行、結果の確認ができます。"
 output: "出力"
 script: "スクリプト"
 disablePagesScript: "Pagesのスクリプトを無効にする"
@@ -690,7 +690,7 @@ createNewClip: "新しいクリップを作成"
 unclip: "クリップ解除"
 confirmToUnclipAlreadyClippedNote: "このノートはすでにクリップ「{name}」に含まれています。ノートをこのクリップから除外しますか？"
 public: "パブリック"
-i18nInfo: "Misskeyは有志によって様々な言語に翻訳されています。{link}で翻訳に協力できます。"
+i18nInfo: "Re:nekey Liteは有志によって様々な言語に翻訳されています。{link}で翻訳に協力できます。"
 manageAccessTokens: "アクセストークンの管理"
 accountInfo: "アカウント情報"
 notesCount: "ノートの数"
@@ -741,7 +741,7 @@ onlineUsersCount: "{n}人がオンライン"
 nUsers: "{n}ユーザー"
 nNotes: "{n}ノート"
 sendErrorReports: "エラーリポートを送信"
-sendErrorReportsDescription: "オンにすると、問題が発生したときにエラーの詳細情報がMisskeyに共有され、ソフトウェアの品質向上に役立てることができます。エラー情報には、OSのバージョン、ブラウザの種類、行動履歴などが含まれます。"
+sendErrorReportsDescription: "オンにすると、問題が発生したときにエラーの詳細情報がRe:nekey Liteに共有され、ソフトウェアの品質向上に役立てることができます。エラー情報には、OSのバージョン、ブラウザの種類、行動履歴などが含まれます。"
 myTheme: "マイテーマ"
 backgroundColor: "背景"
 accentColor: "アクセント"
@@ -834,7 +834,7 @@ hashtags: "ハッシュタグ"
 troubleshooting: "トラブルシューティング"
 useBlurEffect: "UIにぼかし効果を使用"
 learnMore: "詳しく"
-misskeyUpdated: "Misskeyが更新されました！"
+misskeyUpdated: "Re:nekey Liteが更新されました！"
 whatIsNew: "更新情報を見る"
 translate: "翻訳"
 translatedFrom: "{x}から翻訳"
@@ -962,8 +962,8 @@ numberOfLikes: "いいね数"
 show: "表示"
 neverShow: "今後表示しない"
 remindMeLater: "また後で"
-didYouLikeMisskey: "Misskeyを気に入っていただけましたか？"
-pleaseDonate: "Misskeyは{host}が使用している無料のソフトウェアです。これからも開発を続けられるように、ぜひ寄付をお願いします！"
+didYouLikeMisskey: "Re:nekey Liteを気に入っていただけましたか？"
+pleaseDonate: "Re:nekey Liteは{host}が使用している無料のソフトウェアです。これからも開発を続けられるように、ぜひ寄付をお願いします！"
 roles: "ロール"
 role: "ロール"
 normalUser: "一般ユーザー"
@@ -1061,9 +1061,9 @@ _achievements:
   earnedAt: "獲得日時"
   _types:
     _notes1:
-      title: "just setting up my msky"
+      title: "just setting up my Re"
       description: "初めてノートを投稿した"
-      flavor: "良いMisskeyライフを！"
+      flavor: "良いRe:nekey Liteライフを！"
     _notes10:
       title: "いくつかのノート"
       description: "ノートを10回投稿した"
@@ -1159,7 +1159,7 @@ _achievements:
     _login1000:
       title: "ノートマスターⅢ"
       description: "通算ログイン日数が1,000日"
-      flavor: "Misskeyを使ってくれてありがとう！"
+      flavor: "Re:nekey Liteを使ってくれてありがとう！"
     _noteClipped1:
       title: "クリップせずにはいられないな"
       description: "初めてノートをクリップした"
@@ -1219,9 +1219,9 @@ _achievements:
       title: "実績好き"
       description: "実績一覧を3分以上眺め続けた"
     _iLoveMisskey:
-      title: "I Love Misskey"
-      description: "\"I ❤ #Misskey\"を投稿した"
-      flavor: "Misskeyを使ってくださりありがとうございます！ by 開発チーム"
+      title: "I Love Re:nekey Lite"
+      description: "\"I ❤ #Re:nekey Lite\"を投稿した"
+      flavor: "Re:nekey Liteを使ってくださりありがとうございます！ by 開発チーム"
     _foundTreasure:
       title: "宝探し"
       description: "隠されたお宝を発見した"
@@ -1229,7 +1229,7 @@ _achievements:
       title: "ひとやすみ"
       description: "クライアントを起動してから30分以上経過した"
     _client60min:
-      title: "Misskeyの見すぎ"
+      title: "Re:nekey Liteの見すぎ"
       description: "クライアントを起動してから60分以上経過した"
     _noteDeletedWithin1min:
       title: "いまのなし"
@@ -1295,7 +1295,7 @@ _achievements:
     _brainDiver:
       title: "Brain Diver"
       description: "Brain Diverへのリンクを投稿した"
-      flavor: "Misskey-Misskey La-Tu-Ma"
+      flavor: "Re:nekey Lite-Misskey La-Tu-Ma"
 
 _role:
   new: "ロールの作成"
@@ -1453,12 +1453,12 @@ _registry:
   createKey: "キーを作成"
 
 _aboutMisskey:
-  about: "Misskeyはsyuiloによって2014年から開発されている、オープンソースのソフトウェアです。"
+  about: "Re:nekey Liteは、昔のデバイス(Misskey v13が動かない環境)向けに、Misskey v12をベースにし、1641projectが開発している、カスタムクライアントです。"
   contributors: "主なコントリビューター"
   allContributors: "全てのコントリビューター"
   source: "ソースコード"
-  translation: "Misskeyを翻訳"
-  donate: "Misskeyに寄付"
+  translation: "Re:nekey Liteを翻訳"
+  donate: "Re:nekey Liteに寄付"
   morePatrons: "他にも多くの方が支援してくれています。ありがとうございます🥰"
   patrons: "支援者"
 
@@ -1469,8 +1469,8 @@ _nsfw:
 
 _mfm:
   cheatSheet: "MFMチートシート"
-  intro: "MFMは、Misskey内の様々な場所で使用できる専用のマークアップ言語です。ここでは、MFMで使用可能な構文一覧が確認できます。"
-  dummy: "MisskeyでFediverseの世界が広がります"
+  intro: "MFMは、Re:nekey Lite内の様々な場所で使用できる専用のマークアップ言語です。ここでは、MFMで使用可能な構文一覧が確認できます。"
+  dummy: "Re:nekey LiteでFediverseの世界が広がります"
   mention: "メンション"
   mentionDescription: "アットマーク + ユーザー名で、特定のユーザーを示すことができます。"
   hashtag: "ハッシュタグ"
@@ -1683,7 +1683,7 @@ _time:
   day: "日"
 
 _tutorial:
-  title: "Misskeyの使い方"
+  title: "Re:nekey Liteの使い方"
   step1_1: "ようこそ。"
   step1_2: "この画面は「タイムライン」と呼ばれ、あなたや、あなたが「フォロー」する人の「ノート」が時系列で表示されます。"
   step1_3: "あなたはまだ何もノートを投稿しておらず、誰もフォローしていないので、タイムラインには何も表示されていないはずです。"
@@ -1692,7 +1692,7 @@ _tutorial:
   step3_1: "プロフィール設定はうまくできましたか？"
   step3_2: "では試しに、何かノートを投稿してみてください。画面上にある鉛筆マークのボタンを押すとフォームが開きます。"
   step3_3: "内容を書いたら、フォーム右上のボタンを押すと投稿できます。"
-  step3_4: "内容が思いつかない？「Misskey始めました」というのはいかがでしょう。"
+  step3_4: "内容が思いつかない？「Re:nekey Lite始めました」というのはいかがでしょう。"
   step4_1: "投稿できましたか？"
   step4_2: "あなたのノートがタイムラインに表示されていれば成功です。"
   step5_1: "次は、他の人をフォローしてタイムラインを賑やかにしたいところです。"
@@ -1702,11 +1702,11 @@ _tutorial:
   step6_1: "タイムラインに他のユーザーのノートが表示されていれば成功です。"
   step6_2: "他の人のノートには、「リアクション」を付けることができ、簡単にあなたの反応を伝えられます。"
   step6_3: "リアクションを付けるには、ノートの「+」マークをクリックして、好きなリアクションを選択します。"
-  step7_1: "これで、Misskeyの基本的な使い方の説明は終わりました。お疲れ様でした。"
-  step7_2: "もっとMisskeyについて知りたいときは、{help}を見てみてください。"
-  step7_3: "では、Misskeyをお楽しみください🚀"
+  step7_1: "これで、Re:nekey Liteの基本的な使い方の説明は終わりました。お疲れ様でした。"
+  step7_2: "もっとRe:nekey Liteについて知りたいときは、{help}を見てみてください。"
+  step7_3: "では、Re:nekey Liteをお楽しみください🚀"
   step8_1: "最後に、プッシュ通知を有効化してみませんか？"
-  step8_2: "プッシュ通知を受け取ることで、Misskeyを開いていない時にもリアクションやフォロー、メンションなどに気づけます。"
+  step8_2: "プッシュ通知を受け取ることで、Re:nekey Liteを開いていない時にもリアクションやフォロー、メンションなどに気づけます。"
   step8_3: "通知の設定は後から変更できます。"
 
 _2fa:
