--- a/locales/ja-KS.yml
+++ b/locales/ja-KS.yml
@@ -1,8 +1,8 @@
 ---
 _lang_: "日本語 (関西弁)"
 headlineMisskey: "ノートでつながるネットワーク"
-introMisskey: "ようお越し！Misskeyは、オープンソースの分散型マイクロブログサービスやねん。\n「ノート」を作って、いま起こっとることを共有したり、あんたについて皆に発信しよう📡\n「リアクション」機能で、皆のノートに素早く反応を追加したりもできるで✌\nほな新しい世界を探検しよか🚀"
-poweredByMisskeyDescription: "{name}は、オープンソースのプラットフォーム<b>Misskey</b>のインスタンスのひとつなんやで。"
+introMisskey: "ようお越し！Re:nekey Liteは、オープンソースの分散型マイクロブログサービスやねん。\n「ノート」を作って、いま起こっとることを共有したり、あんたについて皆に発信しよう📡\n「リアクション」機能で、皆のノートに素早く反応を追加したりもできるで✌\nほな新しい世界を探検しよか🚀"
+poweredByMisskeyDescription: "{name}は、オープンソースのプラットフォーム<b>Re:nekey Lite</b>のインスタンスのひとつなんやで。"
 monthAndDay: "{month}月 {day}日"
 search: "探す"
 notifications: "通知"
@@ -149,7 +149,7 @@ settingGuide: "ええ感じの設定"
 cacheRemoteFiles: "リモートのファイルをキャッシュする"
 cacheRemoteFilesDescription: "この設定を切っとったら、リモートファイルをキャッシュせんと直リンクするようになるで。サーバーの容量は節約できるけど、サムネイルを作らんなるから通信量が増えるで。"
 flagAsBot: "Botにするで"
-flagAsBotDescription: "もしこのアカウントをプログラム使うて運用するんやったら、このフラグをオンにしてや。オンにすれば、反応がバーッて連鎖せんように開発者が使うたり、Misskeyのシステム上での扱いがBotに合ったもんになるからな。"
+flagAsBotDescription: "もしこのアカウントをプログラム使うて運用するんやったら、このフラグをオンにしてや。オンにすれば、反応がバーッて連鎖せんように開発者が使うたり、Re:nekey Liteのシステム上での扱いがBotに合ったもんになるからな。"
 flagAsCat: "Catやで"
 flagAsCatDescription: "ワレ、猫ちゃんならこのフラグをつけてみ？"
 flagShowTimelineReplies: "タイムラインにノートへの返信を表示するで"
@@ -210,7 +210,7 @@ noUsers: "ユーザーはおらん"
 editProfile: "プロフィールをいじる"
 noteDeleteConfirm: "このノートをほかしてええか？"
 pinLimitExceeded: "これ以上ピン留めできひん"
-intro: "Misskeyのインストールが完了したで！管理者アカウントを作ってや。"
+intro: "Re:nekey Liteのインストールが完了したで！管理者アカウントを作ってや。"
 done: "でけた"
 processing: "処理しとる"
 preview: "プレビュー"
@@ -398,7 +398,7 @@ exploreFediverse: "Fediverseを探ってみる"
 popularTags: "人気のタグ"
 userList: "リスト"
 about: "情報"
-aboutMisskey: "Misskeyってなんや？"
+aboutMisskey: "Re:nekey Liteってなんや？"
 administrator: "管理者"
 token: "確認コード"
 2fa: "二要素認証"
@@ -560,7 +560,7 @@ sort: "仕分ける"
 ascendingOrder: "小さい順"
 descendingOrder: "大きい順"
 scratchpad: "スクラッチパッド"
-scratchpadDescription: "スクラッチパッドではAiScriptを色々試すことができるんや。Misskeyに対して色々できるコードを書いて動かしてみたり、結果を見たりできるで。"
+scratchpadDescription: "スクラッチパッドではAiScriptを色々試すことができるんや。Re:nekey Liteに対して色々できるコードを書いて動かしてみたり、結果を見たりできるで。"
 output: "出力"
 script: "スクリプト"
 disablePagesScript: "Pagesのスクリプトを無効にしてや"
@@ -690,7 +690,7 @@ createNewClip: "新しいクリップを作るで"
 unclip: "クリップ解除するで"
 confirmToUnclipAlreadyClippedNote: "このノートはすでにクリップ「{name}」に含まれとるで。ノートをこのクリップから除外しよか？"
 public: "パブリック"
-i18nInfo: "Misskeyは有志によっていろんな言語に翻訳されとるで。{link}で翻訳に協力したってやー。"
+i18nInfo: "Re:nekey Liteは有志によっていろんな言語に翻訳されとるで。{link}で翻訳に協力したってやー。"
 manageAccessTokens: "アクセストークンの管理"
 accountInfo: "アカウント情報"
 notesCount: "ノートの数やで"
@@ -741,7 +741,7 @@ onlineUsersCount: "{n}人が起きとるで"
 nUsers: "{n}ユーザー"
 nNotes: "{n}ノート"
 sendErrorReports: "エラーリポートを送る"
-sendErrorReportsDescription: "オンにしたら、変なことが起きたときにエラーの詳細がMisskeyに送られて、ソフトウェアの品質向上に使えるようになるで。エラー情報には、OSのバージョン、ブラウザの種類、行動履歴なんかが含まれるで。"
+sendErrorReportsDescription: "オンにしたら、変なことが起きたときにエラーの詳細がRe:nekey Liteに送られて、ソフトウェアの品質向上に使えるようになるで。エラー情報には、OSのバージョン、ブラウザの種類、行動履歴なんかが含まれるで。"
 myTheme: "マイテーマ"
 backgroundColor: "背景"
 accentColor: "アクセント"
@@ -834,7 +834,7 @@ hashtags: "ハッシュタグ"
 troubleshooting: "トラブルシューティング"
 useBlurEffect: "UIにぼかし効果を使うで"
 learnMore: "詳しく"
-misskeyUpdated: "Misskeyが更新されたで！\nモデレーターの人らに感謝せなあかんで"
+misskeyUpdated: "Re:nekey Liteが更新されたで！\nモデレーターの人らに感謝せなあかんで"
 whatIsNew: "更新情報を見るで"
 translate: "翻訳"
 translatedFrom: "{x}から翻訳するで"
@@ -962,8 +962,8 @@ numberOfLikes: "いいね数"
 show: "表示"
 neverShow: "今後表示しない"
 remindMeLater: "また後で"
-didYouLikeMisskey: "Misskey気に入ってくれた？"
-pleaseDonate: "Misskeyは{host}が使用している無料のソフトウェアやで。これからも開発を続けれるように、寄付したってな～。"
+didYouLikeMisskey: "Re:nekey Lite気に入ってくれた？"
+pleaseDonate: "Re:nekey Liteは{host}が使用している無料のソフトウェアやで。これからも開発を続けれるように、寄付したってな～。"
 roles: "ロール"
 role: "ロール"
 normalUser: "一般ユーザー"
@@ -1063,7 +1063,7 @@ _achievements:
     _notes1:
       title: "まいど！"
       description: "初めてノート投稿したった"
-      flavor: "Misskeyを楽しんでな～"
+      flavor: "Re:nekey Liteを楽しんでな～"
     _notes10:
       title: "ノートの天保山"
       description: "ノートを10回投稿した"
@@ -1159,7 +1159,7 @@ _achievements:
     _login1000:
       title: "ノートマイスターⅢ"
       description: "通算1,000日ログインした"
-      flavor: "Misskeyようさん使てもろておおきにな！"
+      flavor: "Re:nekey Liteようさん使てもろておおきにな！"
     _noteClipped1:
       title: "アカンどれもクリップしたいわ"
       description: "初めてノートをクリップした"
@@ -1219,9 +1219,9 @@ _achievements:
       title: "実績好き"
       description: "実績一覧を3分以上眺め続けた"
     _iLoveMisskey:
-      title: "Misskey好きやねん"
-      description: "\"I ❤ #Misskey\"を投稿した"
-      flavor: "Misskeyを使ってくれておおきにな～　by 開発チーム"
+      title: "Re:nekey Lite好きやねん"
+      description: "\"I ❤ #Re:nekey Lite\"を投稿した"
+      flavor: "Re:nekey Liteを使ってくれておおきにな～　by 開発チーム"
     _foundTreasure:
       title: "なんでも鑑定団"
       description: "隠されたお宝を発見した"
@@ -1229,7 +1229,7 @@ _achievements:
       title: "ねんね"
       description: "クライアントを起動してから30分以上経過した"
     _client60min:
-      title: "Misskeyの見すぎ"
+      title: "Re:nekey Liteの見すぎ"
       description: "クライアントを起動してから60分以上経過した"
     _noteDeletedWithin1min:
       title: "＊おおっと＊"
@@ -1295,7 +1295,7 @@ _achievements:
     _brainDiver:
       title: "Brain Diver"
       description: "Brain Diverへのリンクを投稿したった"
-      flavor: "Misskey-Misskey La-Tu-Ma"
+      flavor: "Re:nekey Lite-Misskey La-Tu-Ma"
 
 _role:
   new: "ロールの作成"
@@ -1453,12 +1453,12 @@ _registry:
   createKey: "キーを作る"
 
 _aboutMisskey:
-  about: "Misskeyはsyuiloが2014年からずっと作ってはる、オープンソースなソフトウェアや。"
+  about: "Re:nekey Liteは、昔のデバイス(Misskey v13が動かない環境)向けに、Misskey v12をベースにし、1641projectが開発している、カスタムクライアントやでー"
   contributors: "主な貢献者"
   allContributors: "全ての貢献者"
   source: "ソースコード"
-  translation: "Misskeyを翻訳"
-  donate: "Misskeyに寄付"
+  translation: "Re:nekey Liteを翻訳"
+  donate: "Re:nekey Liteに寄付"
   morePatrons: "他にもぎょうさんの人からサポートしてもろてんねん。ほんまおおきに🥰"
   patrons: "支援者"
 
@@ -1469,8 +1469,8 @@ _nsfw:
 
 _mfm:
   cheatSheet: "MFMチートシート"
-  intro: "MFMは、Misskey内の色んな所で使える専用のマークアップ言語やで。このページでMFMで使える構文一覧が確認できるで。"
-  dummy: "MisskeyでFediverseの世界が広がります"
+  intro: "MFMは、Re:nekey Lite内の色んな所で使える専用のマークアップ言語やで。このページでMFMで使える構文一覧が確認できるで。"
+  dummy: "Re:nekey LiteでFediverseの世界が広がります"
   mention: "メンション"
   mentionDescription: "アットマーク + ユーザー名で、特定のユーザーを示すことができるで。"
   hashtag: "ハッシュタグ"
@@ -1683,7 +1683,7 @@ _time:
   day: "日"
 
 _tutorial:
-  title: "Misskeyの使い方"
+  title: "Re:nekey Liteの使い方"
   step1_1: "よう来たなあ"
   step1_2: "この画面は「タイムライン」って言って、あんたや、あんたが「フォロー」する人の「ノート」が時系列で表示されるんやで。"
   step1_3: "あんたはまだ何もノートを投稿してなくて、誰もフォローしてへんから、タイムラインには何も表示されてないはずやで。"
@@ -1702,11 +1702,11 @@ _tutorial:
   step6_1: "タイムラインに他のユーザーのノートが表示されていれば成功やで。"
   step6_2: "他の人のノートには、「リアクション」を付けることができて、簡単にあんたの反応を伝えられるで。"
   step6_3: "リアクションを付けるんやったら、ノートの「+」マークをクリックして、好きなリアクションを選択してな。"
-  step7_1: "これで、Misskeyの基本的な使い方の説明は終わりやで。お疲れさん。"
-  step7_2: "もっとMisskeyについて知りたいときは、{help}を見るとええかもな。"
-  step7_3: "ほな、Misskeyを楽しんでなー🚀"
+  step7_1: "これで、Re:nekey Liteの基本的な使い方の説明は終わりやで。お疲れさん。"
+  step7_2: "もっとRe:nekey Liteについて知りたいときは、{help}を見るとええかもな。"
+  step7_3: "ほな、Re:nekey Liteを楽しんでなー🚀"
   step8_1: "最後に、プッシュ通知を有効化してみやん？"
-  step8_2: "プッシュ通知を受け取ることで、Misskeyを開いていない時でもリアクションやフォロー、メンションとかに気づけるで。"
+  step8_2: "プッシュ通知を受け取ることで、Re:nekey Liteを開いていない時でもリアクションやフォロー、メンションとかに気づけるで。"
   step8_3: "通知の設定はあとから変更できるで"
 
 _2fa:
